--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.0/css/bulma.min.css">
 
 <!-- Bulma Responsive Tables -->
-<link rel="stylesheet" href="/home/argahsuknesib/Code/Vue/Final/faircorp-table/src/assets/css/main.min.css">
+<link type="text/html" href="/home/argahsuknesib/Code/Vue/Final/faircorp-table/src/assets/css/main.min.css">
     <link
       href="https://fonts.googleapis.com/css?family=Quicksand"
       rel="stylesheet"
